[package]
name = "ninede-pimbo"
version = "0.1.0"
edition = "2024"
description = "An inventory management app/api, made for personal use"
license = "MIT"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
chrono = {version = "0.4.44", features = ["serde"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.51.0", features = ["full"] }
